* more exception resilient DownloadPrices * cleanups