@@ -417,7 +417,7 @@ public class MultiSplitLayout implements LayoutManager
     }
     int oldDividerSize = this.dividerSize;
     this.dividerSize = dividerSize;
-    firePCS("dividerSize", new Integer( oldDividerSize ), new Integer( dividerSize ));
+    firePCS("dividerSize", Integer.valueOf( oldDividerSize ), Integer.valueOf( dividerSize ));
   }
   
   /**
@@ -440,7 +440,7 @@ public class MultiSplitLayout implements LayoutManager
   {
     boolean oldFloatingDividers = this.floatingDividers;
     this.floatingDividers = floatingDividers;
-    firePCS("floatingDividers", new Boolean( oldFloatingDividers ), new Boolean( floatingDividers ));
+    firePCS("floatingDividers", Boolean.valueOf( oldFloatingDividers ), Boolean.valueOf( floatingDividers ));
   }
   
   /**
@@ -460,7 +460,7 @@ public class MultiSplitLayout implements LayoutManager
   {
     boolean oldRemoveDividers = this.removeDividers;
     this.removeDividers = removeDividers;
-    firePCS("removeDividers", new Boolean( oldRemoveDividers ), new Boolean( removeDividers ));
+    firePCS("removeDividers", Boolean.valueOf( oldRemoveDividers ), Boolean.valueOf( removeDividers ));
   }
   
   /**
